# NeuralRendering

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
cmake/: includes.cmake
src/: CMakeLists.txt  build_bvh.h  bvh_tree.cpp  main.cpp  math.h  math_module.cpp  math_module.h  nbvh.cpp  nbvh.h  nbvh_host.cpp  properties.cmake  utils.cpp
